# protonup-gtk

./: CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  UI_FEATURES.md  com.github.Mar0xy.ProtonUpGtk.json  meson.build
.github/workflows/: release.yml
data/: com.github.Mar0xy.ProtonUpGtk.desktop.in  com.github.Mar0xy.ProtonUpGtk.gschema.xml  com.github.Mar0xy.ProtonUpGtk.metainfo.xml.in  meson.build
examples/: test_github_api.rs
src/: application.rs  main.rs  meson.build  window.rs
src/backend/: database.rs  downloader.rs  mod.rs  tool_manager.rs
