[package]
name = "protonup-gtk"
version = "0.2.0"
edition = "2021"
authors = ["Mar0xy"]
description = "Install and manage compatibility tools like GE-Proton for Steam and Wine-GE for Lutris"
license = "GPL-3.0-or-later"

[dependencies]
gtk = { version = "0.9", package = "gtk4", features = ["v4_12"], optional = true }
libadwaita = { version = "0.7", features = ["v1_5"], optional = true }
glib = { version = "0.20", optional = true }
tokio = { version = "1.13.1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dirs = "5.0"
tar = "0.4.36"
flate2 = "1.0"
xz2 = "0.1"
futures-util = "0.3"

[features]
default = ["gui"]
gui = ["gtk", "libadwaita", "glib"]
